  o Fix WAV write on 64-bit arch.  (robs)
  o Fix writing PRC ADPCM files.  (Silas Brown)

Effects:

  o N.B. Changed to different default settings for `rate' effect;
    add -s -L options to be compatible with SoX v14.1.0.  (robs)
  o New options for `rate' effect to configure phase response,
    band-width and aliasing.  (robs)
  o New `riaa' effect: RIAA vinyl playback EQ.  (robs)
  o New `loudness' effect: gain control with ISO 226 loudness
    compensation.  (robs)
  o New `bend' effect; pitch bending.  (robs)
  o New -b option for the norm effect; can be used to fix stereo
    imbalance.  (robs)
  o Wider tempo range for `tempo' effect.  (robs)
  o New --effects-file option to read effects and arguments from
    a file instead of command line. (cbagwell)
  o `filter' effect now supports --plot.  (robs)
  o Improved documentation for the `stat' effect.  (robs)
  o Fix broken audio pass-through with noiseprof effect.  (robs)
  o Fix graph legend display when using --plot octave.  (robs)
  o Fix rare crash with `rate' effect.  (robs)
  o Fix [2190767] `norm' under-amplifying in some cases.  (George Yohng)
  o Fix [2007062] Earwax effect can overflow; should clip. (robs)
  o Fix `phaser' clicks and overflows.  (robs)
  o Trim will now skip past 2G point correctly. (cbagwell)
  o Improved handling of speed changes in the effects chain.  (robs)

Other new features:

  o New psuedo-effects "newfile" and ":" to allow running
    multiple effect chains on a single file.  newfile will
    create a new output file when an effect chain terminates.
    Of most use with trim and silence effects. (cbagwell)
  o Can now use multiple pipes as inputs to the combiner;
    see `Special Filenames' in sox(1).  (robs)
  o Display SoX build environment information with -V -V.  (robs)
  o Display (with -V) the detected file-type if it differs from the 
    file extension.  (robs)
  o New -t option for soxi; to display the detected file type.  (robs)